--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,3 +35,8 @@ flutter:
   uses-material-design: true
   assets:
     - images/
+
+  fonts:
+    - family: IndieFlower
+      fonts:
+        - asset: utils/fonts/IndieFlower-Regular.ttf
